--- a/index.html
+++ b/index.html
@@ -13,28 +13,30 @@
 </head>
 
 <body>
-    <div class="heading">
-        <h1>List To Do</h1>
-    </div>
-
-    <div class="container">
-        <div class="fillarea">
-
-            <h3>Please enter task to add:</h3><br>
-            <input type="text" name="task" placeholder="Add here!" id="userinput" size=40px>
-            <button id=submit><i class="fas fa-plus-square"></i></button>
-            <!-- <button id=delete></button><br> -->
-
-            <div class="itemadd">
-                <h2>Items Added</h2>
-                <!-- <div class="to-do"> -->
-                    <ul id="listitem"></ul>
-                <!-- </div> -->
-            </div>
+    <section class="background">
+        <div class="heading">
+            <h1>List To Do</h1>
         </div>
 
+        <div class="container">
+            <div class="fillarea">
 
-    </div>
+                <h3>Please enter task to add:</h3><br>
+                <input type="text" name="task" placeholder="Add here!" id="userinput" size=40px>
+                <button id=submit><i class="fas fa-plus-square"></i></button>
+                <!-- <button id=delete></button><br> -->
+
+                <div class="itemadd">
+                    <h2>Items Added</h2>
+                    <!-- <div class="to-do"> -->
+                    <ul id="listitem"></ul>
+                    <!-- </div> -->
+                </div>
+            </div>
+
+
+        </div>
+    </section>
     <script src="list-to-do.js"></script>
 </body>
 
